Refactor of fabric to 1.21.1 part 1